--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ textarea {
 /* === General Styles === */
 html {
   font-size: 14px;
+  margin: 0 auto;
 }
 
 body {
@@ -510,7 +511,13 @@ footer {
   text-align: center;
   height: 80vh;
   overflow: hidden;
-  padding: 60px 20px;
+  padding: 80px 0 20px 0;
+}
+
+.initial-call-to-action .content-wrapper {
+  background-color: #f9fafc;
+  border-radius: 50px;
+  padding: 40px 30px;
 }
 
 .initial-call-to-action h2 {
