--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@ p {
 }
 
 h1 {
-  font-size: 3.1em;
+  font-size: 2.5em;
   font-weight: 900;
   margin: 0 auto;
   padding: 0 0 10px 0;
@@ -610,15 +610,16 @@ span {
 
 .call-to-action p {
   font-size: 1.2em;
+  padding-bottom: 20px;
 }
 
 .call-to-action a {
-  color: #fb746c;
+  color: ;
   text-decoration: none;
 }
 
 .call-to-action h1 {
-  padding-bottom: 0.6em;
+  padding-bottom: 20px;
 }
 
 /* === About === */
@@ -841,6 +842,10 @@ span {
 	   														TABLET STYLES
 ========================================================================== */
 @media only screen and (min-width: 600px) {
+  h1 {
+    font-size: 3.2em;
+  }
+
   /*------------------ svg stuff*/
   .hero {
     padding: 0 30%;
