--- a/css/main.css
+++ b/css/main.css
@@ -406,7 +406,7 @@ footer {
 .svg-rm,
 .svg-rb {
   position: absolute;
-  z-index: -10;
+  /*z-index: -10;*/
   width: 124%;
 }
 
@@ -461,7 +461,7 @@ footer {
 .svg-e10,
 .svg-waves {
   position: absolute;
-  z-index: -9;
+  /*z-index: -9;*/
 }
 
 .svg-e6 {
@@ -508,12 +508,16 @@ footer {
   position: relative;
   padding: 0 10%;
   margin: 0 auto;
+  background: url(../img/bg-topography.svg) repeat center;
+}
+
+.hero .content-wrapper {
+  z-index: 1;
 }
 
 .hero h2 {
   padding: 1em 0;
 }
-
 /* === Initial Call To Action === */
 .initial-call-to-action {
   display: flex;
@@ -583,9 +587,9 @@ span {
   padding: 40px 30px;
   margin: 40px;
   max-width: 300px;
-  box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
-  -webkit-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
-  -moz-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
+  box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.1);
+  -webkit-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.1);
+  -moz-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.1);
 }
 
 .skills article i {
@@ -1088,7 +1092,7 @@ span {
   .svg-e10,
   .svg-waves {
     position: absolute;
-    z-index: -9;
+    /*z-index: -9;*/
   }
 
   .svg-e6 {
