--- a/css/main.css
+++ b/css/main.css
@@ -692,7 +692,7 @@ span {
 
 .work-detail img {
   /*width: 80%;*/
-  max-width: 90vh;
+  max-width: 83vh;
   margin: 0 auto;
 }
 
@@ -738,19 +738,24 @@ span {
 .pagination > .button {
   background-color: #deebfe;
   color: #4d39d1;
+  text-transform: uppercase;
+  font-size: 1em;
 }
 
 /* === Work detail image slides === */
-.image-slides-outer > .next,
-.image-slides-outer > .prev {
+.image-slides-buttons {
+  margin-top: 18px;
+}
+
+.image-slides-buttons > .next,
+.image-slides-buttons > .prev {
   background-color: #deebfe;
   border-radius: 50px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 1.4em;
+  font-size: 1em;
   font-weight: 400;
   color: #4d39d1;
-  padding: 10px 20px;
+  padding: 9px 15px;
+  margin: 0 10px;
 }
 
 .image-slides-inner img {
