--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,7 @@ p {
   font-size: 1em;
   font-weight: 400;
   line-height: 1.4em;
+  transition: all 0.3s;
 }
 
 h1 {
@@ -370,15 +371,15 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fb746c;
+  background-color: #deebfe;
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  margin: 0 1em 1em 1em;
 }
 
 .social-icons a {
-  color: #f9fafc;
+  color: #4d39d1;
+  margin: 0 1em 1em 1em;
 }
 
 /* === Lastly === */
@@ -877,13 +878,12 @@ span {
   /*-------------------------hover stuff*/
   /*-------------------------geenral link hover stuff*/
   .footer-navigation a:hover,
-  .lastly a:hover,
-  .contact a:hover {
+  .contact > .rounded-square-container > .content-wrapper .info-sub > a:hover,
+  .lastly a:hover {
     color: #fb746c;
   }
 
-  .call-to-action a:hover,
-  .social-icons a:hover {
+  .call-to-action a:hover {
     color: #deebfe;
   }
 
@@ -898,6 +898,7 @@ span {
     -moz-box-shadow: 6px 6px 14px 0px rgba(216, 112, 46, 0.2);
   }
 
+  .social-icons p:hover,
   .pagination .button:hover,
   .image-slides-buttons .next:hover,
   .image-slides-buttons .prev:hover {
