--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ textarea {
    ========================================================================== */
 /* === General styles === */
 html {
-  font-size: 15px;
+  font-size: 16px;
   margin: 0 auto;
 }
 
@@ -88,15 +88,18 @@ a {
 p {
   font-size: 1em;
   font-weight: 400;
-  line-height: 1.4em;
+  line-height: 1.5em;
   transition: all 0.3s;
+  color: #2d2c33;
+  margin: 0 0;
 }
 
 h1 {
-  font-size: 2.5em;
+  font-size: 3em;
   font-weight: 900;
   margin: 0 auto;
-  padding: 0 0 10px 0;
+  padding: 10px 0;
+  text-transform: uppercase;
 }
 
 h2 {
@@ -112,6 +115,7 @@ h3 {
   font-weight: 700;
   margin: 0.7em auto;
   padding: 0;
+  text-transform: capitalize;
 }
 
 h4 {
@@ -122,7 +126,7 @@ h4 {
 }
 
 section {
-  margin: 60px auto;
+  margin: 10px auto;
 }
 
 img {
@@ -149,8 +153,8 @@ span {
   border-radius: 50px;
   text-align: center;
   text-decoration: none;
-  font-size: 1.4em;
-  font-weight: 400;
+  font-size: 1em;
+  font-weight: 700;
   color: #f9fafc;
   padding: 10px 20px;
 }
@@ -341,6 +345,7 @@ footer {
 
 .social-icons p {
   display: flex;
+  color: #4d39d1;
   justify-content: center;
   align-items: center;
   background-color: #deebfe;
@@ -655,7 +660,10 @@ footer {
 }
 
 .button-container {
-  margin: 30px 0;
+  margin: 20px 0;
+  width: 100%;
+  text-align: center;
+  text-transform: capitalize;
   transition: all 0.5s;
   transition-timing-function: cubic-bezier(0.2, 3, 0.4, 1);
 }
@@ -672,16 +680,6 @@ footer {
 
 .work-overview p {
   padding: 0 22px;
-}
-
-#button-full-width {
-  display: block;
-  width: 80%;
-  line-height: 0;
-  font-size: 1.3em;
-  font-weight: 700;
-  margin: 0 auto;
-  padding: 20px;
 }
 
 .pagination {
@@ -721,6 +719,52 @@ footer {
 
 .image-slides-inner img.active {
   display: inline-block;
+}
+
+/* === Work page === */
+#work-page {
+  padding: 0 20px;
+}
+
+#button-full-width {
+  display: block;
+  margin: 0 auto;
+}
+
+.summary p {
+  color: #4d39d1;
+}
+
+.other-work-links #button-full-width {
+  display: inline-block;
+  margin: 10px auto;
+  width: fit-content;
+  background-color: #deebfe;
+  color: #4d39d1;
+  font-weight: 400;
+}
+
+figure {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.mini-detail {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+.mini-detail-item {
+  float: left;
+  width: 40%;
+  height: 50%;
+  margin: 2.5% 5%;
+}
+
+.mini-detail h2 {
+  font-size: 1em;
+  font-weight: 700;
 }
 
 /* ==========================================================================
@@ -920,6 +964,8 @@ footer {
     flex-flow: row nowrap;
     justify-content: space-around;
   }
+
+  /* === About V2=== */
 
   /* === Contact === */
   .contact {
