--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 2.2em;
   font-weight: 700;
   margin: 0.7em auto;
   padding: 0;
@@ -126,7 +126,7 @@ h4 {
 }
 
 section {
-  margin: 10px auto;
+  margin: 30px auto;
 }
 
 img {
@@ -746,11 +746,12 @@ footer {
 
 figure {
   width: 100%;
-  margin: 0 auto;
+  margin: 0 auto 30px auto;
 }
 
 .mini-detail {
   display: inline-block;
+  margin: 0;
   width: 100%;
   height: 100%;
 }
