--- a/css/main.css
+++ b/css/main.css
@@ -340,6 +340,8 @@ footer {
   border-radius: 50%;
   width: 40px;
   height: 40px;
+  transition: all 0.5s;
+  transition-timing-function: cubic-bezier(0.2, 3, 0.4, 1);
 }
 
 .social-icons a {
@@ -649,9 +651,9 @@ footer {
   text-align: center;
   text-decoration: none;
   font-size: 1em;
-  font-weight: 500;
+  font-weight: 700;
   color: #f9fafc;
-  padding: 10px 20px;
+  padding: 12px 24px;
   margin: 20px auto 0 auto;
   transition: all 0.5s;
   transition-timing-function: cubic-bezier(0.2, 3, 0.4, 1);
@@ -853,6 +855,7 @@ figure {
     color: #deebfe;
   }
 
+  .social-icons p:hover,
   .button:hover {
     transform: scale(1.05, 1.05);
     box-shadow: 6px 6px 14px 0px rgba(216, 112, 46, 0.2);
@@ -861,6 +864,11 @@ figure {
   }
 
   .social-icons p:hover,
+  #work-page .other-work-links .button:hover {
+    background-color: #fb746c;
+    color: #deebfe;
+  }
+
   .pagination .button:hover,
   .image-slides-buttons .next:hover,
   .image-slides-buttons .prev:hover {
@@ -1200,6 +1208,8 @@ figure {
 
   #work-page {
     padding: 40px 140px;
+    margin: 0 auto;
+    max-width: 1600px;
   }
 
   #work-page .button-container {
