--- a/css/main.css
+++ b/css/main.css
@@ -462,6 +462,33 @@ footer {
   max-width: 2%;
 }
 
+/* === Button === */
+
+.button-container {
+  display: flex;
+  flex-flow: row wrap;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
+
+.button {
+  background-color: #fb746c;
+  border-radius: 50px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1em;
+  font-weight: 700;
+  color: #f9fafc;
+  padding: 12px 24px;
+  margin: 20px auto 0 auto;
+  transition: all 0.5s;
+  transition-timing-function: cubic-bezier(0.2, 3, 0.4, 1);
+}
+
+#button-full-width {
+  width: 100%;
+}
+
 /* === Hero === */
 .hero {
   display: flex;
@@ -479,36 +506,6 @@ footer {
 
 .hero .content-wrapper {
   z-index: 1;
-}
-
-/* === Initial call to action === */
-.initial-call-to-action {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  height: 80vh;
-  overflow: hidden;
-  padding: 80px 0 20px 0;
-}
-
-.initial-call-to-action .content-wrapper {
-  background-color: #f9fafc;
-  border-radius: 50px;
-  padding: 40px 30px;
-  position: relative;
-}
-
-.cta-highlight {
-  background-color: #deebfe;
-  display: inline-block;
-  margin: 1.5em 0;
-  padding: 6px 20px;
-  border-radius: 50px;
-}
-
-.cta-highlight h2 {
-  font-weight: 700;
 }
 
 /* === Work === */
@@ -554,7 +551,7 @@ footer {
   padding-top: 15px;
 }
 
-/* === Final call to action === */
+/* === Call to action === */
 .call-to-action {
   padding: 0 20px;
 }
@@ -597,8 +594,7 @@ footer {
   margin: 0 auto;
 }
 
-.image-container,
-.work-overview img {
+.image-container {
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -635,96 +631,7 @@ footer {
   font-size: 1.2em;
 }
 
-.button-container {
-  display: flex;
-  flex-flow: row wrap;
-  text-transform: capitalize;
-  margin-bottom: 20px;
-}
-
-.button {
-  background-color: #fb746c;
-  border-radius: 50px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 1em;
-  font-weight: 700;
-  color: #f9fafc;
-  padding: 12px 24px;
-  margin: 20px auto 0 auto;
-  transition: all 0.5s;
-  transition-timing-function: cubic-bezier(0.2, 3, 0.4, 1);
-}
-
-#button-full-width {
-  width: 100%;
-}
-
-/* === Work overview === */
-.work-overview {
-  padding: 0 20px;
-  text-align: center;
-}
-
-.work-overview img {
-  max-width: 83vh;
-  margin: 0 auto;
-}
-
-.work-overview-text {
-  background-color: #ffffff;
-  border-radius: 50px;
-  padding: 30px;
-  margin: 30px auto;
-  box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
-  -webkit-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
-  -moz-box-shadow: 6px 9px 23px 0px rgba(117, 138, 180, 0.2);
-}
-
-.work-overview p {
-  padding: 0 22px;
-}
-
-.pagination {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: stretch;
-  padding: 0 4%;
-}
-
-.pagination > .button {
-  background-color: #deebfe;
-  color: #4d39d1;
-  text-transform: uppercase;
-  font-size: 1em;
-}
-
-/* === Work overview image slides === */
-.image-slides-buttons {
-  margin-top: 18px;
-}
-
-.image-slides-buttons > .next,
-.image-slides-buttons > .prev {
-  background-color: #deebfe;
-  border-radius: 50px;
-  font-size: 1em;
-  font-weight: 400;
-  color: #4d39d1;
-  padding: 9px 15px;
-  margin: 0 10px;
-}
-
-.image-slides-inner img {
-  display: none;
-}
-
-.image-slides-inner img.active {
-  display: inline-block;
-}
-
-/* === Work page === */
+/* === Work Page === */
 #work-page {
   padding: 0 20px;
 }
@@ -862,16 +769,6 @@ figure {
     color: #deebfe;
   }
 
-  .pagination .button:hover,
-  .image-slides-buttons .next:hover,
-  .image-slides-buttons .prev:hover {
-    background-color: #fb746c;
-    color: #deebfe;
-    box-shadow: 6px 6px 14px 0px rgba(216, 112, 46, 0.2);
-    -webkit-box-shadow: 6px 6px 14px 0px rgba(216, 112, 46, 0.2);
-    -moz-box-shadow: 6px 6px 14px 0px rgba(216, 112, 46, 0.2);
-  }
-
   /* == Hamburger menu == */
   .open #menu-content ul li {
     margin: 20px 0;
@@ -926,61 +823,6 @@ figure {
     margin: 0 28px;
   }
 
-  /* === Work V2=== */
-  #work-page {
-    padding: 0 50px;
-  }
-
-  .summary {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    width: 100%;
-    height: 100%;
-  }
-
-  .title {
-    width: 60%;
-    margin-right: 70px;
-  }
-
-  .summary figure {
-    width: 40%;
-  }
-
-  .objective,
-  .problem,
-  .solution,
-  .style-guide,
-  .wireframe,
-  .full-design {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: flex-start;
-    width: 100%;
-  }
-
-  .objective h3,
-  .problem h3,
-  .solution h3,
-  .style-guide h3,
-  .wireframe h3,
-  .full-design h3 {
-    min-width: 40%;
-    padding: 0;
-    margin: 0;
-  }
-
-  .full-design {
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .full-design .button {
-    float: right;
-    margin-right: 15px;
-  }
-
   /* === Work Main=== */
   #article-b {
     flex-flow: row-reverse;
@@ -1029,7 +871,28 @@ figure {
     margin-right: 0;
   }
 
-  /* === Work V2=== */
+  /* === Work page=== */
+  #work-page {
+    padding: 0 50px;
+  }
+
+  .summary {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+  }
+
+  .title {
+    width: 60%;
+    margin-right: 70px;
+  }
+
+  .summary figure {
+    width: 40%;
+  }
+
   .mini-detail {
     display: flex;
     justify-content: space-between;
@@ -1042,6 +905,39 @@ figure {
     width: unset;
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .objective,
+  .problem,
+  .solution,
+  .style-guide,
+  .wireframe,
+  .full-design {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  .objective h3,
+  .problem h3,
+  .solution h3,
+  .style-guide h3,
+  .wireframe h3,
+  .full-design h3 {
+    min-width: 40%;
+    padding: 0;
+    margin: 0;
+  }
+
+  .full-design {
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .full-design .button {
+    float: right;
+    margin-right: 15px;
   }
 
   /* === Contact === */
@@ -1206,12 +1102,6 @@ figure {
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
-  }
-  /* === Work overview === */
-  .work-overview {
-    max-width: 120vh;
-    margin-left: auto;
-    margin-right: auto;
   }
 
   /* === Work V2 === */
